--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -256,6 +256,7 @@
   align-items: center;
   text-align: center;
   gap: 3rem;
+  margin: 0 1rem 0 1rem;
 }
 
 .rowImg {
@@ -278,10 +279,20 @@
   transition: transform 0.7s;
 }
 
-.featureContent h4 {
-  color: #8cc6c6;
+.techStack {
   position: relative;
-  left: -16px;
+  width: 100%;
+  top: 4rem;
+  left: 43%;
+  font: 2.5rem;
+
+  color: #253838;
+}
+
+.featureContent h4 {
+  color: rgb(107, 108, 108);
+  position: relative;
+  right: 2.5rem;
 }
 
 .featureContent h4:hover {
@@ -317,7 +328,8 @@
 
 .developerText {
   position: relative;
-  margin-right: 2rem
+  margin-right: 2rem;
+  /* top: 2.8rem; */
 }
 
 
@@ -365,11 +377,11 @@
   display: inline-block;
   padding: 13px 40px;
   background: transparent;
-  /* background: var(--bg-color); */
+  /* background: #1a1a1a; */
   color: #fcfdfd;
   font-size: 15px;
   font-weight: 600;
-  border: 2px solid #fcfdfd;
+  border: 1px solid #fcfdfd;
   border-radius: 5px;
   transition: all 0.5s ease;
   cursor: pointer;
@@ -498,7 +510,8 @@
 
 .webAppsText {
   position: relative;
-  margin-left: 2rem;
+  margin-left: 1rem;
+  top: 2rem;
 }
 
 .webAppsText h5 {
@@ -543,7 +556,7 @@
   border-radius: 5px;
   transition: all 0.5s ease;
   cursor: pointer;
-  left: 0%;
+  left: 70%;
 }
 
 .webAppsBtn:hover {
@@ -714,15 +727,18 @@
     transition: all 0.5s ease;
     background: transparent;
     backdrop-filter: blur(35px);
+    border-bottom: solid 1px #5c5f5f;
   }
 
   .logo {
     font-size: 32px;
     white-space: nowrap;
     position: relative;
+    color: #fcfdfd;
     font-weight: 700;
     width: 300px;
     left: 7%;
+    font-family: Open Sans, sans-serif;
   }
 
   .navbar {
@@ -783,7 +799,7 @@
   .homeText {
     position: relative;
     left: 16px;
-    top: 7%;
+    top: 11%;
     margin-top: 2.3rem;
     white-space: nowrap;
   }
@@ -806,10 +822,33 @@
     border-radius: 3px;
   }
 
+  .techStack {
+    position: relative;
+    width: 100%;
+    top: 5.5rem;
+    left: 43%;
+    font: 1.5rem;
+
+    color: #fcfdfd;
+  }
+
   .featureContent {
-    grid-template-rows: repeat(auto-fit, minmax(50px, auto));
+    position: relative;
+    grid-template-rows: repeat(auto-fit, minmax(146px, auto));
     gap: 2rem;
     align-items: center;
+    margin: 1rem;
+  }
+
+  .featureContent h4 {
+    position: relative;
+    left: 5%;
+
+  }
+
+  .feature {
+    position: relative;
+    top: 2rem;
   }
 
   .rowImg {
@@ -828,8 +867,8 @@
     padding: 0;
     position: relative;
     margin: 0;
-    left: -151px;
-    /* top: 1%; */
+    left: -146px;
+    top: 8rem; 
   }
 
   .developerText {
@@ -858,43 +897,165 @@
     border-radius: 3px;
   }
 
-  /* .developerSection {
-    padding: 0;
+  .tour {
     position: relative;
-    margin: 0;
-    left: 16px; */
-  /* top: 1%; */
-  /* }
-
-  .developerImg {
-    display: none;
+    top: 2rem;
   }
-
-  .developerText {
+  
+  .tourContent {
     position: relative;
-    left: 16px;
-    top: 7%;
-    margin-top: 2.3rem;
-    white-space: nowrap;
+    left: -0.3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 3rem;
+    /* margin-top: 20rem; */
+    margin-right: 2rem;
   }
-
-  .developerText h1 {
-    margin-top: 1rem;
-    font-size: 2rem;
-  }
-
-  .developerText p {
-    margin-top: 2rem;
-    font-size: 8px;
-  }
-
-  .developerButton {
+  
+  .box {
     position: relative;
-    padding: 13px 20px;
-    font-size: 14px;
-    left: 80%;
+  }
+  
+  .box img {
     border-radius: 3px;
-  } */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+    filter: brightness(70%);
+    transition: all 0.5s cubic-bezier(.499, .05, .55, .95);
+    will-change: filter;
+    display: block;
+  }
+  
+  .box h6 {
+    position: absolute;
+    left: 25px;
+    bottom: 95px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #fcfdfd;
+  }
+  
+  .box h4 {
+    position: absolute;
+    color: #fcfdfd;
+    left: 25px;
+    bottom: 65px;
+    font-size: 20px;
+    font-weight: 700;
+  }
+  
+  .box img:hover {
+    filter: brightness(90%) hue-rotate(50deg);
+    transform: scale(1.04);
+    cursor: pointer;
+  }
+  
+  .center-btn {
+    text-align: center;
+    margin-top: 4rem;
+  }
+  
+  .tourBtn {
+    position: relative;
+    display: inline-block;
+    padding: 13px 40px;
+    background: transparent;
+    /* background: var(--bg-color); */
+    color: #fcfdfd;
+    font-size: 15px;
+    font-weight: 600;
+    border: 2px solid #fcfdfd;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+  }
+  
+  .tourBtn:hover {
+    transform: translateX(10px);
+    border: 2px solid #fcfdfd;
+    background: #fcfdfd;
+    color: #1a1a1a;
+  }
+
+  .webAppsSection {
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    top: 19rem;
+    /* gap: 9rem; */
+  }
+  
+  .webAppsImg img {
+    position: relative;
+    width: 90%;
+    height: 600px;
+    /* border-radius: 3px; */
+    /* margin-left: 13%; */
+    margin-left: 3%;
+  }
+  
+  .webAppsText {
+    position: relative;
+    margin-left: 2rem;
+  }
+  
+  .webAppsText h5 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #fcfd;
+    /* text-transform: uppercase; */
+    letter-spacing: 6px;
+    margin-bottom: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .webAppsText h1 {
+    font-size: 4rem;
+    font-weight: 800;
+    list-style: 1.2;
+    margin-bottom: 25px;
+    color: #fcfdfd;
+  }
+  
+  .webAppsText p {
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 30px;
+    color: #fcfdfd;
+    margin-bottom: 35px;
+    font-family: 'Open Sans', sans-serif;
+  }
+  
+  .webAppsBtn {
+    position: relative;
+    display: inline-block;
+    padding: 13px 40px;
+    background: transparent;
+    /* background: var(--bg-color); */
+    color: #fcfdfd;
+    font-size: 15px;
+    font-weight: 600;
+    border: 2px solid #fcfdfd;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+  }
+  
+  .webAppsBtn:hover {
+    transform: translateX(10px);
+    border: 2px solid #fcfdfd;
+    background: #fcfdfd;
+    color: #1a1a1a;
+  }
 
   .services-content {
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
@@ -907,29 +1068,6 @@
 
   .box h4 {
     font-size: 18px;
-  }
-
-  .UI-UX {
-    grid-template-columns: 1fr;
-    gap: 5rem;
-  }
-
-  .UI-UX-img img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-  }
-
-  .UI-UX-text h5 {
-    font-size: 20px;
-  }
-
-  .UI-UX-text h2 {
-    font-size: 4rem;
-  }
-
-  .UI-UX-text p {
-    font-size: 0.9rem;
   }
 
   .newsletter-content {
