Update UI styles and add tech stack section

--- a/src/app/about-us/page.module.css
+++ b/src/app/about-us/page.module.css
@@ -214,6 +214,32 @@
   color: #fcfdfd;
 }
 
+.homeText h1 {
+  background: linear-gradient(to right,
+      rgb(5, 119, 139),
+      rgb(239, 94, 213),
+      rgb(63, 51, 224),
+      rgb(2, 70, 74),
+      rgb(234, 39, 124),
+      rgb(230, 180, 73),
+      rgb(5, 119, 139));
+  background-clip: text;
+  color: transparent;
+  background-size: 200% auto;
+  animation: gradientAnimation 5s linear infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 200% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 .homePara {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
