--- a/src/app/web-development/page.module.css
+++ b/src/app/web-development/page.module.css
@@ -209,6 +209,31 @@
   color: #fcfdfd;
 }
 
+.homeText h1 {
+  background: linear-gradient(to right,
+      rgb(5, 119, 139),
+      rgb(239, 94, 213),
+      rgb(63, 51, 224),
+      rgb(2, 70, 74),
+      rgb(234, 39, 124),
+      rgb(230, 180, 73),
+      rgb(5, 119, 139));
+  background-clip: text;
+  color: transparent;
+  background-size: 200% auto;
+  animation: gradientAnimation 5s linear infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 200% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .homePara {
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
@@ -243,6 +268,17 @@
 }
 
 /* Feature section */
+
+.techStack {
+  position: relative;
+  width: 100%;
+  top: 3.5rem;
+  left: 42%;
+  font-size: 3rem;
+  color: #b1b5b5;
+  /* transform: translateX(-50%); */
+}
+
 .featureContent {
   position: relative;
   top: 8rem;
@@ -274,7 +310,7 @@
 }
 
 .featureContent h4 {
-  color: #435252;
+  color: rgb(165, 196, 148);
   position: relative;
   left: -16px;
 }
@@ -734,7 +770,7 @@
   }
 
   .homePara {
-    font-size: 15px;
+    font-size: 0.9rem;
   }
 
   .homeButton {
