--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -862,11 +862,13 @@
     position: relative;
     margin: 0;
     margin-top: 2rem;
-    left: 12px;
+    left: -3px;
     /* top: 1%; */
   }
 
   .homeText {
+    max-width: 700px;
+    overflow: hidden;
     position: relative;
     left: 16px;
     top: 11%;
@@ -881,14 +883,15 @@
 
   .homePara {
     margin-top: 2rem;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
+    white-space: pre-wrap;
   }
 
   .homeButton {
     position: relative;
     padding: 13px 20px;
     font-size: 14px;
-    left: 80%;
+    left: 75%;
     border-radius: 3px;
   }
 
@@ -1214,46 +1217,98 @@
 /* Mobile screen sizes smaller than */
 @media (max-width: 525px) {
 
+  .header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    width: 100vw;
+    height: 80px;
+    background: transparent;
+    /* padding: 27px 17%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.5s ease;
+    background: transparent;
+    backdrop-filter: blur(35px);
+    border-bottom: solid 1px #5c5f5f;
+  }
+
   .logo {
-    font-size: 30px;
+    font-size: 32px;
     white-space: nowrap;
     position: relative;
-    color: #e7e7ec;
+    color: #fcfdfd;
     font-weight: 700;
-    width: 300px;
-    left: 4%;
+    /* width: 300px; */
+    left: 3%;
     font-family: Open Sans, sans-serif;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .socials {
+    /* margin-left: 12rem; */
+    position: relative;
+    left: 16%;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    /* margin-left: 2rem; */
   }
 
   .followUs {
     position: relative;
-    left: 2px;
-    font-size: 8px;
-
+    /* right: 1rem; */
   }
 
-  .socials {
+  .socials a:first-child {
     position: relative;
-    margin-left: 25px;
-    /* right: 32px; */
+    color: #fcfdfd;
+    font-size: 1rem;
+    /* border: solid 1px #fcfdfd; */
+    /* margin-left: 2rem; */
   }
 
-  .iconTop1 {
+  .socials a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-image: no-repeat;
+    height: 45px;
+    width: 45px;
+    /* color: #874213; */
+    /* background: #202020; */
+    font-size: 20px;
+    margin-right: 8px;
+    transition: transform 0.6s;
+    /* border: 1px solid #fcfdfd; */
+    border-radius: 0;
+  }
+
+  .menu {
+    display: block;
+    cursor: pointer;
+    /* display: none; */
+    z-index: 10001;
     position: relative;
-    left: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-image: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,255,255,1)'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
+    color: #fcfdfd;
+    height: 30px;
     width: 30px;
-  }
-
-  .iconTop2 {
-    position: relative;
-    left: 16px;
-    width: 30px;
-  }
-
-  .iconTop3 {
-    position: relative;
-    left: 16px;
-    width: 30px;
+    margin-left: 0.5rem;
+    left: -4px;
+    margin-bottom: 35px;
+    /* display: none; */
   }
 
   .home {
@@ -1261,21 +1316,18 @@
     position: relative;
     margin: 0;
     margin-top: 2rem;
-    left: 0;
+    /* left: 12px; */
     /* top: 1%; */
   }
 
   .homeText {
     position: relative;
     left: 16px;
-    top: 11%;
+    top: 7%;
     margin-top: 2.3rem;
-    white-space: nowrap;
-  }
-
-  .homeText h5 {
-    margin-top: 1rem;
-    font-size: 1.3rem;
+    max-width: 525px;
+    overflow: hidden;
+    /* white-space: nowrap; */
   }
 
   .homeText h1 {
@@ -1285,14 +1337,356 @@
 
   .homePara {
     margin-top: 2rem;
-    font-size: 14px;
+    font-size: 0.8rem;
+    white-space: pre-wrap;
+    font-size: 20px;
   }
 
   .homeButton {
     position: relative;
-    padding: 7px 10px;
+    padding: 13px 20px;
+    font-size: 14px;
+    left: 70%;
+    border-radius: 3px;
+  }
+
+  .feature {
+    display: none;
+    position: relative;
+    top: 2rem;
+    /* margin: 1rem; */
+    left: 0;
+  }
+
+  .techStack {
+    display: none;
+    position: relative;
+    /* width: 100%; */
+    top: 8.5rem;
+    left: 270px;
+    font-size: 1.5rem;
+
+    color: #b1b5b5;
+  }
+
+  .featureContent {
+    position: relative;
+    grid-template-rows: repeat(auto-fit, minmax(146px, auto));
+    gap: 2rem;
+    align-items: center;
+    margin: 1rem;
+    left: 0;
+  }
+
+  .featureContent h4 {
+    position: relative;
+    left: 2.5%;
+    text-align: start;
+
+  }
+
+  .feature {
+    position: relative;
+    top: 2rem;
+  }
+
+  .rowImg {
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: fill;
+    color: #fcfdfd;
+    margin: 0 auto;
+    margin-bottom: 24px;
+    /* border-radius: 50%; */
+    cursor: pointer;
+  }
+
+  .firstPicture {
+    position: relative;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 140px;
+  }
+
+  .developerImg {
+    display: none;
+    max-width: 96%;
+    height: 328px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 103px;
+  }
+
+  .developerSection {
+    padding: 0;
+    position: relative;
+    margin: 0;
+    top: 12rem;
+  }
+
+
+  .developerText {
+    position: relative;
+    /* left: 16px; */
+    top: 7%;
+    margin-top: 2.3rem;
+    max-width: 525px;
+    overflow: hidden;
+  }
+
+  .developerText h1 {
+    margin-top: 1rem;
+    font-size: 3rem;
+  }
+
+  .developerText p {
+    margin-top: 2rem;
+    font-size: 0.9rem;
+    white-space: pre-wrap;
+  }
+
+  .developerButton {
+    position: relative;
+    padding: 13px 20px;
     font-size: 14px;
     left: 80%;
     border-radius: 3px;
+  }
+
+  .tour {
+    position: relative;
+    top: 2rem;
+  }
+
+  .tourContent {
+    position: relative;
+    left: -0.3rem;
+    bottom: 4rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 3rem;
+    /* margin-top: 20rem; */
+    margin-right: 2rem;
+  }
+
+  .centerText {
+    position: relative;
+    top: 11rem;
+    margin: 0;
+  }
+
+  .box {
+    position: relative;
+  }
+
+  .box img {
+    border-radius: 3px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+    filter: brightness(70%);
+    transition: all 0.5s cubic-bezier(.499, .05, .55, .95);
+    will-change: filter;
+    display: block;
+  }
+
+  .box h6 {
+    position: absolute;
+    left: 25px;
+    bottom: 95px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #fcfdfd;
+  }
+
+  .box h4 {
+    position: absolute;
+    color: #fcfdfd;
+    left: 25px;
+    bottom: 65px;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .box img:hover {
+    filter: brightness(90%) hue-rotate(50deg);
+    transform: scale(1.04);
+    cursor: pointer;
+  }
+
+  .center-btn {
+    text-align: center;
+    margin-top: 4rem;
+  }
+
+  .tourBtn {
+    position: relative;
+    display: inline-block;
+    padding: 13px 40px;
+    background: transparent;
+    /* background: var(--bg-color); */
+    color: #fcfdfd;
+    font-size: 15px;
+    font-weight: 600;
+    border: 2px solid #fcfdfd;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+  }
+
+  .tourBtn:hover {
+    transform: translateX(10px);
+    border: 2px solid #fcfdfd;
+    background: #fcfdfd;
+    color: #1a1a1a;
+  }
+
+
+  .webAppsSection {
+    /* width: 100%; */
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    top: -3rem;
+    /* gap: 9rem; */
+    padding: 0;
+    position: relative;
+    margin: 0;
+    margin-top: 2rem;
+    left: -43px;
+  }
+
+  .webAppsImg img {
+    position: relative;
+    display: none;
+    width: 90%;
+    height: 600px;
+    /* border-radius: 3px; */
+    /* margin-left: 13%; */
+    margin-left: 3%;
+  }
+
+  .webAppsText {
+    /* position: relative;
+    margin-left: 2rem; */
+    position: relative;
+    left: 16px;
+    top: 11%;
+    margin-top: 2.3rem;
+    white-space: nowrap;
+  }
+
+  .webAppsText h5 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #fcfd;
+    /* text-transform: uppercase; */
+    letter-spacing: 6px;
+    margin-bottom: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .webAppsText h1 {
+    /* font-size: 4rem; */
+    font-weight: 800;
+    list-style: 1.2;
+    margin-bottom: 25px;
+    color: #fcfdfd;
+    margin-top: 1rem;
+    font-size: 3rem;
+  }
+
+  .webAppsText p {
+    /* font-size: 1rem; */
+    font-weight: 500;
+    line-height: 30px;
+    color: #fcfdfd;
+    margin-bottom: 35px;
+    font-family: 'Open Sans', sans-serif;
+    /* margin-top: 2rem; */
+    font-size: 0.9rem;
+  }
+
+  .webAppsBtn {
+    position: relative;
+    display: inline-block;
+    /* padding: 13px 40px; */
+    background: transparent;
+    /* background: var(--bg-color); */
+    color: #fcfdfd;
+    /* font-size: 15px; */
+    font-weight: 600;
+    border: 2px solid #fcfdfd;
+    /* border-radius: 5px; */
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+    padding: 13px 20px;
+    font-size: 14px;
+    left: 80%;
+    border-radius: 3px;
+  }
+
+  .webAppsBtn:hover {
+    transform: translateX(10px);
+    border: 2px solid #fcfdfd;
+    background: #fcfdfd;
+    color: #1a1a1a;
+  }
+
+  .box h6 {
+    font-size: 6px;
+  }
+
+  .box h4 {
+    font-size: 18px;
+  }
+
+  .newsletterContent {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    left: -10px;
+    top: 6rem;
+  }
+
+  .newsletterText h2 {
+    font-size: 2rem;
+  }
+
+  .newsletterText p {
+    font-size: 0.9rem;
+  }
+
+  .newsletterContent form {
+    grid-template-columns: 1fr;
+  }
+
+  .footer {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+    left: 32px;
+    top: 13rem;
+  }
+
+  .servicesContent {
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+
+  }
+
+  .copyright {
+    position: relative;
+    top: 16rem;
   }
 }
