--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -588,24 +588,16 @@
 .webAppsBtn {
   position: relative;
   display: inline-block;
-  padding: 13px 40px;
+  padding: 10px 15px;
   background: transparent;
-  /* background: var(--bg-color); */
-  color: #fcfdfd;
+  color: #c4deb1;
   font-size: 15px;
   font-weight: 600;
-  border: 2px solid #fcfdfd;
+  border: 1px solid #fcfdfd;
   border-radius: 5px;
   transition: all 0.5s ease;
   cursor: pointer;
-  left: 70%;
-}
-
-.webAppsBtn:hover {
-  transform: translateX(10px);
-  border: 2px solid #fcfdfd;
-  background: #fcfdfd;
-  color: #1a1a1a;
+  left: 66%;
 }
 
 .newsletterContent {
@@ -754,7 +746,7 @@
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {}
 
-@keyframes rotate {
+/* @keyframes rotate {
   from {
     transform: rotate(360deg);
   }
@@ -762,7 +754,7 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
 
 
 /* Mobile screen sizes smaller than */
@@ -1668,5 +1660,478 @@
   .copyright {
     position: relative;
     top: 16rem;
+  }
+}
+
+
+@media (max-width: 375px) {
+
+  .header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    width: 100vw;
+    height: 60px;
+    background: transparent;
+    /* padding: 27px 17%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.5s ease;
+    background: transparent;
+    backdrop-filter: blur(35px);
+    border-bottom: solid 1px #5c5f5f;
+  }
+
+  .logo {
+    font-size: 24px;
+    white-space: nowrap;
+    position: relative;
+    color: #fcfdfd;
+    font-weight: 700;
+    /* width: 300px; */
+    left: 3%;
+    font-family: Open Sans, sans-serif;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .socials {
+    /* margin-left: 12rem; */
+    position: relative;
+    left: 16%;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    /* font-size: 0.8rem; */
+    /* margin-left: 2rem; */
+  }
+
+  .followUs {
+
+    right: 1rem;
+  }
+
+  .socials a:first-child {
+    position: relative;
+    color: #fcfdfd;
+    font-size: 0.73rem;
+    right: 1.4rem;
+    margin: 0;
+    /* border: solid 1px #fcfdfd; */
+    /* margin-left: 2rem; */
+  }
+
+  .socials a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-image: no-repeat;
+    height: 45px;
+    width: 45px;
+    /* color: #874213; */
+    /* background: #202020; */
+    font-size: 20px;
+    margin-right: 8px;
+    transition: transform 0.6s;
+    /* border: 1px solid #fcfdfd; */
+    border-radius: 0;
+  }
+
+  .iconTop1 {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    right: 0.8rem;
+  }
+
+  .iconTop2 {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    right: 0.8rem;
+  }
+
+  .iconTop3 {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    right: 0.8rem;
+  }
+
+  .menu {
+    display: block;
+    cursor: pointer;
+    /* display: none; */
+    z-index: 10001;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-image: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='rgba(255,255,255,1)'%3E%3Cpath d='M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z'%3E%3C/path%3E%3C/svg%3E");
+    color: #fcfdfd;
+    height: 25px;
+    width: 25px;
+    margin-left: -0.8rem;
+    margin-top: 3px;
+    right: 1rem;
+    margin-bottom: 35px;
+    /* display: none; */
+  }
+
+  /* Home section */
+  .home {
+    padding: 0;
+    position: relative;
+    margin: 0;
+    margin-top: 3rem;
+  }
+
+  .homeText {
+    max-width: 350px;
+    overflow: hidden;
+    position: relative;
+    left: 16px;
+    top: 5%;
+    margin-top: 0.3rem;
+    /* white-space: nowrap; */
+  }
+
+  .homeText h5 {
+    font-size: 1.3rem;
+  }
+
+  .homeText h1 {
+    margin-top: 1rem;
+    font-size: 1.9rem;
+    color: #fcfdfd;
+  }
+
+  .homePara {
+    margin-top: 1rem;
+    /* font-size: 0.8rem; */
+    white-space: pre-wrap;
+    font-size: 17px;
+  }
+
+  .homeButton {
+    position: relative;
+    padding: 10px 15px;
+    font-size: 14px;
+    left: 66%;
+    border-radius: 3px;
+  }
+
+  .feature {
+    display: none;
+    position: relative;
+    top: 2rem;
+    /* margin: 1rem; */
+    left: 0;
+  }
+
+  .techStack {
+    display: none;
+    position: relative;
+    /* width: 100%; */
+    top: 8.5rem;
+    left: 270px;
+    font-size: 1.5rem;
+
+    color: #b1b5b5;
+  }
+
+  .featureContent {
+    position: relative;
+    grid-template-rows: repeat(auto-fit, minmax(146px, auto));
+    gap: 2rem;
+    align-items: center;
+    margin: 1rem;
+    left: 0;
+  }
+
+  .featureContent h4 {
+    position: relative;
+    left: 2.5%;
+    text-align: start;
+
+  }
+
+  .feature {
+    position: relative;
+    top: 2rem;
+  }
+
+  .rowImg {
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: fill;
+    color: #fcfdfd;
+    margin: 0 auto;
+    margin-bottom: 24px;
+    /* border-radius: 50%; */
+    cursor: pointer;
+  }
+
+  .firstImage {
+    position: relative;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: 360px;
+    border-radius: 3px;
+    top: 100px;
+    left: 0.39rem;
+  }
+
+
+  .developerImg {
+    display: none;
+
+  }
+
+  .developerSection {
+    padding: 0;
+    position: relative;
+    margin: 0;
+    /* margin-top: 2rem; */
+    top: 2.5rem;
+  }
+
+  .developerText {
+    position: relative;
+    left: 166px;
+    top: 2%;
+    /* margin-top: 2.3rem; */
+    /* white-space: nowrap; */
+  }
+
+  .developerText h5 {
+    font-size: 1.1rem;
+  }
+
+  .developerText h1 {
+    margin-top: -0.5rem;
+    font-size: 1.6rem;
+  }
+
+  .developerText p {
+    margin-top: -0.8rem;
+    white-space: pre-wrap;
+    font-size: 17px;
+  }
+
+  .webDevBtn {
+    position: relative;
+    padding: 10px 15px;
+    font-size: 14px;
+    left: 66%;
+    border-radius: 3px;
+  }
+
+  .tour {
+    position: relative;
+    max-width: 100vw;
+  }
+
+  .centerText {
+    position: relative;
+    top: 6rem;
+    margin: 0;
+  }
+
+  .tourContent {
+    position: relative;
+    left: -0.3rem;
+    bottom: 10rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 3rem;
+    /* margin-top: 20rem; */
+    margin-right: 2rem;
+  }
+
+
+  .box {
+    position: relative;
+    max-width: 350px;
+    border: 1px solid #393a3a;
+  }
+
+  .box img {
+    border-radius: 3px;
+    max-width: 100%;
+    object-fit: cover;
+    filter: brightness(70%);
+    transition: all 0.5s cubic-bezier(.499, .05, .55, .95);
+    will-change: filter;
+    display: block;
+  }
+
+  .box h6 {
+    position: absolute;
+    left: 15px;
+    bottom: 75px;
+    color: #fcfdfd;
+    font-size: 1rem;
+  }
+
+  .customH6 {
+    bottom: 0;
+  }
+
+  .box h4 {
+    position: absolute;
+    color: #fcfdfd;
+    left: 15px;
+    bottom: 3%;
+    font-size: 8px;
+    font-weight: 700;
+  }
+
+  .box img:hover {
+    filter: brightness(90%) hue-rotate(50deg);
+    transform: scale(1.04);
+    cursor: pointer;
+  }
+
+  .tourBtn {
+    position: relative;
+    display: inline-block;
+    padding: 10px 15px;
+    background: transparent;
+    /* background: var(--bg-color); */
+    color: #fcfdfd;
+    font-size: 15px;
+    font-weight: 600;
+    border: 1px solid #fcfdfc;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+  }
+
+
+  .firstImage2 {
+    position: relative;
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width: 350px;
+    border-radius: 3px;
+    top: -64px;
+    left: 0.49rem;
+  }
+
+
+  .webAppsSection {
+    padding: 0;
+    position: relative;
+    margin: 0;
+    max-width: 370px;
+    top: -5rem;
+  }
+
+  .webAppsImg img {
+    display: none;
+  }
+
+  .webAppsText {
+    /* position: relative; */
+    width: 100vw;
+    left: 56px;
+    top: 3rem;
+    margin: 0;
+    /* white-space: nowrap; */
+  }
+
+  .webAppsText h1 {
+    /* font-size: 4rem; */
+    font-weight: 800;
+    margin-bottom: 25px;
+    max-width: 500px;
+    color: #fcfdfd;
+    margin-top: 1rem;
+    font-size: 1.6rem;
+  }
+
+  .webAppsText p {
+    /* font-size: 1rem; */
+    /* line-height: 30px; */
+    color: #fcfdfd;
+    margin-bottom: 35px;
+    font-size: 17px;
+    max-width: 350px;
+    /* white-space: pre-wrap; */
+  }
+
+  .webAppsBtn {
+    position: relative;
+    display: inline-block;
+    background: transparent;
+    color: #fcfdfd;
+    font-weight: 600;
+    border: 1px solid #fcfdfd;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    left: 0%;
+    padding: 13px 20px;
+    font-size: 14px;
+    left: 61%;
+    border-radius: 3px;
+  }
+
+  .box h6 {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .box h4 {
+    font-size: 32px;
+  }
+
+  .newsletterContent {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    left: -26px;
+    top: 3rem;
+  }
+
+  .newsletterText h2 {
+    font-size: 2rem;
+  }
+
+  .newsletterText p {
+    font-size: 0.9rem;
+  }
+
+  .footer {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+    left: 16px;
+    top: 8rem;
+  }
+
+  .servicesContent {
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 2rem;
+
+  }
+
+  .copyright {
+    position: relative;
+    bottom: 0;
+    font-size: 18px
   }
 }
